--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> 1Game</title>
+<title> HTML technologies </title>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<link href="CSS/style.css" rel="stylesheet" />
+<script src="JS/script.js" > </script>
+
+<meta name="keywords" content="HTML,HTML5,CSS,CSS3,JavaScript,Web Technologies,Web Applications,Front end designing" />
+<meta name="description" content="A overview on the front end web technologies like HTML,CSS and JavaScript. The future is web technology, So be ahead in learning the trending technology />
+<meta name="author" content="saiviru" />
+<meta name=robots" content="all,nofollow" />
 </head>
+
 <body>
-<div>
-<h1> My first app </h1>
-</div>
+	<div class="father">
+		<div class="top">
+			<ul>
+			<li>
+			<a class="child" href="http://google.com">SIGN IN</a>
+			</li>
+			<li>
+			<a class="child" href="http://google.com">SIGN UP</a>
+			</li>
+			</ul>
+		<div class="top">
+			<ul>
+			<li>
+			<a class="next" href="http://google.com">ABOUT</a>
+			</li>
+			<li>
+			<a class="next" href="http://google.com">DRAG</a>	
+			</li>
+			</ul>
+			</div>
+		</div>
+	</div>
+
+
+
 </body>
 </html>
