--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title> HTML technologies </title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<link href="CSS/style.css" rel="stylesheet" />
-<script src="JS/script.js" > </script>
+<link href="style.css" rel="stylesheet" />
+<script src="script.js" > </script>
 
 <meta name="keywords" content="HTML,HTML5,CSS,CSS3,JavaScript,Web Technologies,Web Applications,Front end designing" />
 <meta name="description" content="A overview on the front end web technologies like HTML,CSS and JavaScript. The future is web technology, So be ahead in learning the trending technology />
